@@ -2,6 +2,8 @@ kfreebsd-11 (11.0~svn284956-2) UNRELEASED; urgency=medium
 
   * Disable building the xen (PV, i386-only) flavour, removed upstream,
     as it is preferred now to use the generic kernel in HVM mode.
+  * Use new preferred hostname for upstream SVN with HTTPS
+    (svn.freebsd.org)
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Fri, 10 Jul 2015 17:11:18 +0100
 
